# lcc

./: README.md  dune-project  lambdair.cabal  lambdair.opam  lcc.cabal  lir.cabal  shell.nix
lib/: ast.ml  dune
src/Lambdair/: AST.hs  Example.hs  IR.hs
src/Lcc/: AST.hs  Codegen.hs  Example.hs  IR.hs  Typecheck.hs  Util.hs
src/Lir/: AST.hs  Example.hs  IR.hs  Typecheck.hs
test/: AST.hs  IR.hs  Main.hs  dune
