cabal-version:   3.8
name:            lcc
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common lcc
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.18.*
  default-Language:
    GHC2021

library
  import:
    lcc
  exposed-modules:
      Lcc.AST
    , Lcc.Example
    , Lcc.IR
    , Lcc.Typecheck
  hs-source-dirs:
    src
