cabal-version:   3.8
name:            lcc
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common lcc
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.18.*
    , process == 1.6.*
    , template-haskell == 2.20.*
  default-Language:
    GHC2021

library
  import:
    lcc
  exposed-modules:
      Lcc.AST
    , Lcc.Codegen
    , Lcc.Example
    , Lcc.IR
    , Lcc.Typecheck
    , Lcc.Util
  hs-source-dirs:
    src
