cabal-version:   3.8
name:            lir
version:         0.0.1.0
author:          vglfr
maintainer:      vf.velt@gmail.com

common lir
  ghc-options:
    -Wall
    -Wcompat
    -Werror
    -Widentities
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base == 4.18.*
  default-Language:
    GHC2021

library
  import:
    lir
  exposed-modules:
      Lir.AST
    , Lir.Example
    , Lir.IR
  hs-source-dirs:
    src
